Fixed main element class, fixed flex align items on body element

--- a/css/style.css
+++ b/css/style.css
@@ -57,15 +57,15 @@ body {
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	justify-content: center;
 }
 
 /* Class Selectors */
-.qr-code-component {
+.container {
 	display: flex;
 	flex-direction: column;
 	background-color: #fff;
-	margin: 0 auto;
 	padding: 1.6rem 1.6rem 3.2rem;
 	border-radius: 1.5rem;
 	gap: 2rem;
